# scraper-core

./: pyproject.toml
core/: scraper.py
